--- a/Client/src/css/particles-style.css
+++ b/Client/src/css/particles-style.css
@@ -130,3 +130,9 @@ html{
      background-repeat: no-repeat;
    }
    
+
+
+   .titulo-competition{
+     color: #363636;
+     font-size: 1.5em;
+   }
