--- a/Client/src/css/profile-arq.css
+++ b/Client/src/css/profile-arq.css
@@ -1,17 +1,53 @@
 #fondoPerfil {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 100%;
-    opacity: 1;
-    max-width: 100vw;
+    width: 100vw;
+    height: 100vh;
+	position: relative;
+	overflow: hidden;
+	background: url(../img/fondo3.png) center center;
+	background-size: cover;
   }
-
+.fondoPerfilBlur{
+    filter: blur(4px);
+}
   .card-arquitecto{
-      border:2px solid red;
-      position: absolute;
       top:10vh;
+      z-index: 2;
   }
 
-  
+
+  .pr-title{
+	float:left;
+	font-size:22px;
+	text-align:left;
+	font-family: 'Questrial', sans-serif;
+	font-weight: 700;
+	position:relative;
+	padding-left:40px;
+	padding-right:20px;
+	margin-top: 50px;
+}
+.pr-title:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 4px;
+    height: 80px;
+    background: #262626;
+    top: 3vh;
+    margin-top: 2px;
+}
+
+.btn-tecarch{
+    background-color: #262626;
+    color: #f5f5f5;
+	margin-right: 10px; 
+	margin-left: 40px;
+    transition: all 200ms linear;
+    margin-top: 150px;
+}
+.btn-tecarch:hover{
+    background-color: #363636;
+    color: #ffffff;
+	margin-right: 10px; 
+	transition: all 200ms linear;
+}
