--- a/Client/src/css/particles-style.css
+++ b/Client/src/css/particles-style.css
@@ -136,3 +136,8 @@ html{
      color: #363636;
      font-size: 1.5em;
    }
+
+   .titulo-concurso{
+    color: #363636;
+    font-size: 1.5em;
+   }
