--- a/Client/src/css/profile-arq.css
+++ b/Client/src/css/profile-arq.css
@@ -51,3 +51,13 @@
 	margin-right: 10px; 
 	transition: all 200ms linear;
 }
+
+/* ------------------------- PERFIL INSTITUCION  ---------------------- */
+#fondoInstitucion {
+    width: 100vw;
+    height: 100vh;
+	position: relative;
+	overflow: hidden;
+	background: url(../img/institucion.png) center center;
+	background-size: cover;
+  }
