--- a/Client/src/css/navbar.css
+++ b/Client/src/css/navbar.css
@@ -19,7 +19,7 @@ ul {
     position: fixed;
     width: 100%;
 	opacity: 0;
-	animation: aparece 4s ease-out;
+	animation: aparece 14s ease-out;
 	animation-fill-mode: forwards;
 	border-bottom: 1px solid rgba(38,38,38,0.4);
 }
@@ -44,6 +44,7 @@ ul {
     display: block;
     padding: 10px 0;
     color:#363636;
+    font-weight: 100;
     text-transform: uppercase;
     text-decoration: none;
     background: transparent;
