--- a/Client/src/css/competition-form.css
+++ b/Client/src/css/competition-form.css
@@ -23,7 +23,7 @@
 }
 
 .titulo-h4 {
-  color: red;
+  color: #363636;
   font-family: "Questrial", sans-serif;
   font-size: 1em;
   margin-top: 0px;
