--- a/Client/src/css/competition-card.css
+++ b/Client/src/css/competition-card.css
@@ -31,7 +31,7 @@
 	float:left;
 	width:100%;
 	padding-top:10px;
-	color:#262626;
+	color:red;
 	text-align:left;
 	font-size:13px;
 	text-transform:uppercase;
