--- a/Client/src/css/profile-arq.css
+++ b/Client/src/css/profile-arq.css
@@ -24,7 +24,7 @@
 	position:relative;
 	padding-left:40px;
 	padding-right:20px;
-	margin-top: 50px;
+	/* margin-top: 50px; */
 }
 .pr-title:before {
     content: '';
