--- a/Client/src/css/competition-card.css
+++ b/Client/src/css/competition-card.css
@@ -33,7 +33,7 @@
 	float:left;
 	width:100%;
 	padding-top:10px;
-	color:red;
+	color:#363636;
 	text-align:left;
 	font-size:13px;
 	text-transform:uppercase;
